--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="TcADSNet_Demo.App"
+﻿<prism:PrismApplication x:Class="TcADSNet_Demo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TcADSNet_Demo"
-             StartupUri="Views/MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:local="clr-namespace:TcADSNet_Demo">
+    <!--StartupUri="Views/Menu.xaml" : if not using regions need to add StartupUri property in Application-->
     <Application.Resources>
          
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
