--- a/Views/MoveDemo.xaml
+++ b/Views/MoveDemo.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TcADSNet_Demo.Views.MainWindow"
+﻿<UserControl x:Class="TcADSNet_Demo.Views.MoveDemo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +7,8 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="MainWindow" Height="675" Width="1200">
-    <Window.Resources>
+        d:DesignHeight="555" d:DesignWidth="1180">
+    <UserControl.Resources>
         <Style x:Key="TextBlockCenteredHeader" TargetType="TextBlock">
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="20"/>
@@ -23,7 +23,7 @@
             <Setter Property="Height" Value="30"/>
             <Setter Property="FontSize" Value="18"/>
         </Style>
-    </Window.Resources>
+    </UserControl.Resources>
     
     <Grid>
         <Grid.ColumnDefinitions>
@@ -64,4 +64,4 @@
                    Source="https://www.transparentpng.com/thumb/cube/AZIkiw-cube-transparent-image.png"/>
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
