--- a/Views/VariablesTree.xaml
+++ b/Views/VariablesTree.xaml
@@ -4,11 +4,36 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcADSNet_Demo.Views"
+             xmlns:model="clr-namespace:TcADSNet_Demo.Model"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="1160">
+    <UserControl.Resources>
+        
+        
+    </UserControl.Resources>
+    
     <Grid>
-        <TextBlock Foreground="red">Variables Tree</TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+        <TreeView Grid.Column="0" x:Name="TreeViewVariables"
+                  ItemsSource="{Binding MembersCollection.Collection}" 
+                  SelectedItemChanged="TreeViewVariables_SelectedItemChanged">
+            <TreeView.Resources>
+                <HierarchicalDataTemplate 
+                                  DataType="{x:Type model:PlcMember}"
+                                  ItemsSource="{Binding Members}">
+                    <TextBlock Text="{Binding Name}"/>
+                </HierarchicalDataTemplate>
+                <HierarchicalDataTemplate 
+                                  DataType="{x:Type model:PlcSymbol}"
+                                  >
+                    <TextBlock Text="{Binding Name}"/>
+                </HierarchicalDataTemplate>
+            </TreeView.Resources>
+        </TreeView>
     </Grid>
 </UserControl>
