--- a/Views/VariablesTree.xaml
+++ b/Views/VariablesTree.xaml
@@ -11,25 +11,62 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="1160">
     <UserControl.Resources>
-        
-        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Themes/GlobalThemes.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </UserControl.Resources>
     
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TreeView Grid.Column="0" x:Name="TreeViewSecondVariables"
-                  ItemsSource="{Binding TwincatSymbols}">
-            <TreeView.Resources>
-                <HierarchicalDataTemplate
-                                  DataType="{x:Type twincat:Symbol}"
-                                  ItemsSource="{Binding SubSymbols}">
-                    <TextBlock Text="{Binding InstanceName}"/>
-                </HierarchicalDataTemplate>
-            </TreeView.Resources>
-        </TreeView>
+        <!--Tree View-->
+        <Border Grid.Column="0" Style="{StaticResource BorderMenuBase_Left}">
+            <TreeView x:Name="TreeViewSecondVariables"
+                      Style="{StaticResource TreeViewStyle}"
+                      ItemsSource="{Binding TwincatSymbols}" MouseDoubleClick="TreeViewSecondVariables_MouseDoubleClick">
+                <TreeView.Resources>
+                    <HierarchicalDataTemplate
+                                    DataType="{x:Type twincat:Symbol}"
+                                    ItemsSource="{Binding SubSymbols}">
+                        <TextBlock Text="{Binding InstanceName}"/>
+                    </HierarchicalDataTemplate>
+                </TreeView.Resources>
+            </TreeView>
+        </Border>
+        <!--Splitter-->
+        <GridSplitter Grid.Column="1"
+                          HorizontalAlignment="Center"
+                          VerticalAlignment="Stretch"
+                          Background="Transparent" 
+                          Width="5">
+            <GridSplitter.Template>
+                <ControlTemplate>
+                    <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}"
+                               Background="Transparent"/>
+                </ControlTemplate>
+            </GridSplitter.Template>
+        </GridSplitter>
+        <!--Variables Selected List-->
+        <Border Grid.Column="2" Style="{StaticResource BorderDatagridBase}">
+            <StackPanel Orientation="Vertical">
+                <!--Header Title-->
+                <Grid Height="40">
+                    <TextBlock Style="{StaticResource TextBlockHeader1}">Selected Symbols</TextBlock>
+                </Grid>
+                <!--Content-->
+                <DataGrid x:Name="DataGridSelectedSymbols">
+                    
+                </DataGrid>
+                
+            </StackPanel>
+        </Border>
+        
+
     </Grid>
 </UserControl>
