--- a/Views/Menu.xaml
+++ b/Views/Menu.xaml
@@ -51,6 +51,76 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <!--TopMenu Button Border Connect-->
+        <Style x:Key="TopMenuButtonBorderConnect" TargetType="Button">
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="MinWidth" Value="110"/>
+            <Setter Property="Margin" Value="20"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="mainBorder"
+                                CornerRadius="10"
+                                Background="{Binding ButtonConnectColor}"
+                                BorderBrush="AliceBlue"
+                                BorderThickness="1,1,1,1">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"
+                                              TextElement.FontWeight="Normal"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="mainBorder" Property="RenderTransform">
+                                    <Setter.Value>
+                                        <TransformGroup>
+                                            <TranslateTransform X="1" Y="1"/>
+                                            <ScaleTransform ScaleX="0.97" ScaleY="0.97"/>
+                                        </TransformGroup>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter TargetName="mainBorder" Property="Background" Value="#4a7894"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <!--TopMenu Button Border Disconnect-->
+        <Style x:Key="TopMenuButtonBorderDisconnect" TargetType="Button">
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="MinWidth" Value="110"/>
+            <Setter Property="Margin" Value="20"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="mainBorder"
+                                CornerRadius="10"
+                                Background="Transparent"
+                                BorderBrush="AliceBlue"
+                                BorderThickness="1,1,1,1">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"
+                                              TextElement.FontWeight="Normal"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="mainBorder" Property="RenderTransform">
+                                    <Setter.Value>
+                                        <TransformGroup>
+                                            <TranslateTransform X="1" Y="1"/>
+                                            <ScaleTransform ScaleX="0.97" ScaleY="0.97"/>
+                                        </TransformGroup>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter TargetName="mainBorder" Property="Background" Value="red"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <!--TopMenu TextBlock-->
         <Style x:Key="TopMenuTextBlock" TargetType="TextBlock">
             <Setter Property="Margin" Value="5"/>
@@ -132,9 +202,9 @@
                 <TextBox x:Name="TxtBox_NetId" Width="250" Height="30"/>
                 <Button x:Name="BtnTextAMSPort" Content="AMS Port" Style="{StaticResource TopMenuButton}"/>
                 <TextBox x:Name="TxtBox_Port" Width="250" Height="30"/>
-                <Button x:Name="BtnAdsConnect" Content="ADS Connect" Style="{StaticResource TopMenuButtonBorder}" 
+                <Button x:Name="BtnAdsConnect" Content="ADS Connect" Style="{StaticResource TopMenuButtonBorderConnect}" 
                         Click="BtnAdsConnect_Click"/>
-                <Button x:Name="BtnAdsDesconnect" Content="Desconnect" Style="{StaticResource TopMenuButtonBorder}" 
+                <Button x:Name="BtnAdsDesconnect" Content="Desconnect" Style="{StaticResource TopMenuButtonBorderDisconnect}" 
                         Click="BtnAdsDesconnect_Click"/>
             </StackPanel>
         </Grid>
