TreeView Symbol Selection - Block read selected symbols

--- a/Themes/GlobalThemes.xaml
+++ b/Themes/GlobalThemes.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
     
     <!--Border Menu Base - Left-->
     <Style x:Key="BorderMenuBase_Left" TargetType="Border">
@@ -29,6 +30,19 @@
         <Setter Property="Foreground"           Value="White"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    
+    
+    <!--Icon Delete-->
+    <Style x:Key="IconDelete" TargetType="iconPacks:PackIconMaterial">
+        <Setter Property="Foreground" Value="#3ca2de"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
     
 </ResourceDictionary>
